RESOLVED FIXED301729
initialClip is not transformed by the CTM, leading to cursor clipping during dictation
https://bugs.webkit.org/show_bug.cgi?id=301729
Summary initialClip is not transformed by the CTM, leading to cursor clipping during ...
Mike Wyrzykowski
Reported 2025-10-30 17:18:09 PDT
Cursor clipping logic is incorrect when cross page tiles
Attachments
Mike Wyrzykowski
Comment 1 2025-10-30 17:18:21 PDT
Mike Wyrzykowski
Comment 2 2025-10-31 12:26:21 PDT
EWS
Comment 3 2025-11-04 11:02:27 PST
Committed 302552@main (8d7b28e8a712): <https://commits.webkit.org/302552@main> Reviewed commits have been landed. Closing PR #53245 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.